syntax = "proto3";

package orders;

option go_package = "github.com/nawafswe/orders-service/orders/proto";

import "ordered_item.proto";

message Order { 

    int64 order_id = 1;
    int64 customer_id = 2;
    string status = 3;
    double grand_total = 4;
    repeated OrderedItem items = 5;

}

message OrderStatus { 
    int64 order_id = 1;
    string status = 2;

}